@@ -1,3 +1,9 @@
+2009-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/png.c (ReadOnePNGImage): Ensure that opacity channel is
+	properly initialized.  Resolves SourceForge issue 2831240
+	"Possible alpha channel issue with PNG w/palette and tRNS".
+
 2009-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/nt_base.h (HAVE_TIFFSWABARRAYOFTRIPLES): Need to define
